--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.github-glitchenzo.nugetforunity": "4.5.0",
+    "com.cysharp.r3": "1.3.0",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.28",
@@ -10,6 +10,8 @@
     "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.2",
+    "org.nuget.observablecollections.r3": "3.3.4",
+    "org.nuget.r3": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -47,7 +49,8 @@
       "name": "OpenUPM",
       "url": "https://package.openupm.com",
       "scopes": [
-        "com.github-glitchenzo.nugetforunity"
+        "com.cysharp",
+        "org.nuget"
       ]
     }
   ]
