--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.boxqkrtm.ide.cursor": "https://github.com/boxqkrtm/com.unity.ide.cursor.git",
     "com.cysharp.r3": "1.3.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.8.2",
